--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "node-sass": "^6.0.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "element-ui": "^2.15.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^7.3.1",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-cookie": "^1.1.4",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
